home.css
.background_wallpaper {
    width: 100%;
    height: 100vh;
    background-image: url("./imgs/background/pawel-czerwinski-yXIKZ5PMqn4-unsplash.jpg");    
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


.centered_search-bar {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    width: 48%;
    justify-content: center;
}

.centered_search-bar:hover {
    box-shadow: 0 0 0 5px #0000001a;
}

.centered_search-bar > .centered_search-bar input:focus{
    border: 10px solid black;
}

.centered_search-bar input {
    border: 0;
    outline: none;
    height: 52px;
    width: 92%;
    border-bottom-right-radius: 4px;
    border-top-right-radius: 4px;
    padding: 10px;
    font-family: inherit;
    font-size: 18px;
}

.centered_search-bar input::placeholder {
    color: #767676;
}

.centered_search-bar  button {
    position: relative;
    right: -1px;
    border: 0;
    background-color: white;
    outline: none;
    height: 52px;
    width: 8%;
    color: #767676;
    font-size: 18px;
    border-bottom-left-radius: 4px;
    border-top-left-radius: 4px;
}

.sub-nav {
    position: fixed;
    width: 100%;
    background-color: #ffffff;
    height: 40px;
    top: 69px;
    border-top: 1px solid rgba(53, 48, 48, 0.233);
}

.sub-nav ul{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    height: 40px;
    list-style: none;
}

.sub-nav a {
    color: #767676;
    text-decoration: none;
}

.sub-nav a:hover {
    color: #111111;
}

.impact {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.impact h2 {
    color: #ffffff;
    margin-left: -20px;
    font-size: 32px;
}

.impact p {
    color: #e9e5e5;
    font-style: italic;
    margin-top: 4vh;
    font-size: 20px;
}

.composed_logo {
    margin-top: 260px;
    display: flex;
    flex-direction: row;
    width: 200px;
    align-items: center;
}

.composed_logo img {
    width: 76px;
}

